Stand von Teil 1 des Beitrages

--- a/Waehrungsrechner/res/values/strings.xml
+++ b/Waehrungsrechner/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, HauptActivity!</string>
-    <string name="app_name">Waehrungsrechner</string>
+    <string name="betrag_eingeben">Bitte den Betrag hier eingeben!</string>
+    <string name="app_name">Währungsrechner</string>
+    <string name="cmd_berechnen">Berechnen</string>
 </resources>
