--- a/Waehrungsrechner/res/values/strings.xml
+++ b/Waehrungsrechner/res/values/strings.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<!-- Globale Strings -->
+	<string name="app_name">Währungsrechner</string>
+	
+	<!-- View Texte -->
     <string name="betrag_eingeben">Bitte den Betrag hier eingeben!</string>
-    <string name="app_name">Währungsrechner</string>
     <string name="cmd_berechnen">Berechnen</string>
+    
+    <!-- Menü -->
+    <string name="opt_loeschen">Ergebnisliste löschen</string>
+    <string name="opt_loeschen_kurz">Löschen</string>
+    <string name="opt_schliessen">Programm schließen</string>
+    <string name="opt_schliessen_kurz">Schließen</string>
+    
+    <!-- Fehlertexte -->
     <string name="err_betarg_format">Der Betrag hat das falsche Format!</string>
     <string name="err_kurs_format">Der Kurs liegt im falschen Format vor!</string>
 </resources>
